# PrimVertReco

./: .clang-format  BUILDING.md  CMakeLists.txt  CMakePresets.json  Config.cmake.in  HACKING.md  PrimVertReco.kdev4  README  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  classpvr_1_1pvr.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_66474b7a3009e8ad9502b3d0cd1a3f7c.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  index.html  modules.html  namespacepvr.html  namespaces.html  pages.html  pvr_8hpp.html  searchdata-v1.js
.github/workflows/: ci.yml
Modules/: FindHYDRA.cmake
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  hades_example.cpp
inc/: LinkDef.h  PrimVertReco.h
include/pvr/: pvr.hpp
src/: PrimVertReco.cxx
test/: CMakeLists.txt
test/source/: test_basic.cpp
tests/: BasicCase_tests.cpp  CMakeLists.txt
